force-app/main/default/objects/Job__c/fields/AdministrativeCharges__c.field-meta.xml
<CustomField>
    <fullName>AdministrativeCharges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Administrative Charges</label>
    <type>Checkbox</type>
</CustomField>