force-app/main/default/objects/Job__c/fields/AreYouCelebratingInAnyWay__c.field-meta.xml
<CustomField>
    <fullName>AreYouCelebratingInAnyWay__c</fullName>
    <label>Are You Celebrating In Any Way?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>