force-app/main/default/objects/Job__c/fields/AreYouGivingTheReportOnAnIPad__c.field-meta.xml
<CustomField>
    <fullName>AreYouGivingTheReportOnAnIPad__c</fullName>
    <label>Are You Giving The Report On An I-Pad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>