force-app/main/default/objects/Job__c/fields/BillingCurrency__c.field-meta.xml
<CustomField>
    <fullName>BillingCurrency__c</fullName>
    <label>Billing Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>