force-app/main/default/objects/Job__c/fields/BudgetedJOBOPEINR__c.field-meta.xml
<CustomField>
    <fullName>BudgetedJOBOPEINR__c</fullName>
    <label>Budgeted JOB OPE (INR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>