force-app/main/default/objects/Job__c/fields/ClientServicePartner__c.field-meta.xml
<CustomField>
    <fullName>ClientServicePartner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Service Partner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>