force-app/main/default/objects/Job__c/fields/CreditDaysPeriodAsPerEL__c.field-meta.xml
<CustomField>
    <fullName>CreditDaysPeriodAsPerEL__c</fullName>
    <label>Credit Days Period As Per EL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>