force-app/main/default/objects/Job__c/fields/EngagementLeader__c.field-meta.xml
<CustomField>
    <fullName>EngagementLeader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>