force-app/main/default/objects/Job__c/fields/Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Enquiry__c</fullName>
    <label>Enquiry</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Projects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>