force-app/main/default/objects/Job__c/fields/External_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Job_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Job ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>