force-app/main/default/objects/Job__c/fields/FirstExpectedBillDate__c.field-meta.xml
<CustomField>
    <fullName>FirstExpectedBillDate__c</fullName>
    <label>First Expected Bill Date</label>
    <type>Date</type>
</CustomField>