force-app/main/default/objects/Job__c/fields/GM_EMP__c.field-meta.xml
<CustomField>
    <fullName>GM_EMP__c</fullName>
    <label>GM_EMP</label>
    <length>50</length>
    <referenceTo>GM_EMP__x</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>ExternalLookup</type>
</CustomField>