force-app/main/default/objects/Job__c/fields/GSTStatus__c.field-meta.xml
<CustomField>
    <fullName>GSTStatus__c</fullName>
    <label>GST Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>