force-app/main/default/objects/Job__c/fields/GTEmployeesWithBestClientRelation__c.field-meta.xml
<CustomField>
    <fullName>GTEmployeesWithBestClientRelation__c</fullName>
    <label>GT Employees With Best Client Relation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>