force-app/main/default/objects/Job__c/fields/GTSeniorLeadersHaveConfirmedInvite__c.field-meta.xml
<CustomField>
    <fullName>GTSeniorLeadersHaveConfirmedInvite__c</fullName>
    <label>GT Senior Leaders Have Confirmed Invite?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>