force-app/main/default/objects/Job__c/fields/JobCode__c.field-meta.xml
<CustomField>
    <fullName>JobCode__c</fullName>
    <label>Job Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>