force-app/main/default/objects/Job__c/fields/JobCreationDate__c.field-meta.xml
<CustomField>
    <fullName>JobCreationDate__c</fullName>
    <label>Job Creation Date</label>
    <type>Date</type>
</CustomField>