force-app/main/default/objects/Job__c/fields/JobLocation__c.field-meta.xml
<CustomField>
    <fullName>JobLocation__c</fullName>
    <label>Job Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GT One Aerocity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>