force-app/main/default/objects/Job__c/fields/JobOwner__c.field-meta.xml
<CustomField>
    <fullName>JobOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>