force-app/main/default/objects/Job__c/fields/LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>LegalEntity__c</fullName>
    <label>Legal Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grant Thornton Bharat LLP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>