force-app/main/default/objects/Job__c/fields/MultipleCopiesOfDeliveryReport__c.field-meta.xml
<CustomField>
    <fullName>MultipleCopiesOfDeliveryReport__c</fullName>
    <label>Multiple Copies Of Delivery Report</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>