force-app/main/default/objects/Job__c/fields/PreviousYearComparableJob__c.field-meta.xml
<CustomField>
    <fullName>PreviousYearComparableJob__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Year Comparable Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>