force-app/main/default/objects/Job__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Project</fullName>
            </value>
            <value>
                <fullName>Kick-Off</fullName>
            </value>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>Finalizing Closure</fullName>
            </value>
            <value>
                <fullName>Closure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>