force-app/main/default/objects/Job__c/fields/SubMarket__c.field-meta.xml
<CustomField>
    <fullName>SubMarket__c</fullName>
    <label>Sub Market</label>
    <length>255</length>
    <type>Text</type>
</CustomField>