force-app/main/default/objects/Job__c/fields/Total_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Amount__c</fullName>
    <label>Total Invoice Amount</label>
    <summarizedField>Billing__c.Amount__c</summarizedField>
    <summaryForeignKey>Billing__c.Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>