force-app/main/default/objects/Job__c/fields/WCGTProjectID__c.field-meta.xml
<CustomField>
    <fullName>WCGTProjectID__c</fullName>
    <externalId>true</externalId>
    <label>WCGT Job ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>